<resources>
    <string name="app_name" translatable="false">RechenMax</string>
    <string name="app_version_value" translatable="false">v3.0.45</string>
    <string name="app_version" translatable="false">Version - v3.0.45</string>
    <string name="result_text" translatable="false"></string>
    <string name="calculation_text" translatable="false"></string>
    <string name="clear_clipboard" translatable="false">MC</string>
    <string name="paste_clipboard" translatable="false">MR</string>
    <string name="copy_to_clipboard" translatable="false">MS</string>
    <string name="sine" translatable="false">sin</string>
    <string name="cosine" translatable="false">cos</string>
    <string name="tangent" translatable="false">tan</string>
    <string name="a_sine" translatable="false">sin⁻¹</string>
    <string name="a_cosine" translatable="false">cos⁻¹</string>
    <string name="a_tangent" translatable="false">tan⁻¹</string>
    <string name="sine_h" translatable="false">sinh</string>
    <string name="cosine_h" translatable="false">cosh</string>
    <string name="tangent_h" translatable="false">tanh</string>
    <string name="a_sine_h" translatable="false">sinh⁻¹</string>
    <string name="a_cosine_h" translatable="false">cosh⁻¹</string>
    <string name="a_tangent_h" translatable="false">tanh⁻¹</string>
    <string name="eulers_number" translatable="false">е</string>
    <string name="pi" translatable="false">π</string>
    <string name="log" translatable="false">log</string>
    <string name="log2" translatable="false">log₂</string>
    <string name="logx" translatable="false">logₓ</string>
    <string name="ln" translatable="false">ln</string>
    <string name="half" translatable="false">½</string>
    <string name="third" translatable="false">⅓</string>
    <string name="quarter" translatable="false">¼</string>
    <string name="fifth" translatable="false">⅕</string>
    <string name="tenth" translatable="false">⅒</string>
    <string name="permutation" translatable="false">nPr</string>
    <string name="combination" translatable="false">nCr</string>
    <string name="percentage" translatable="false">%</string>
    <string name="semicolon" translatable="false">;</string>
    <string name="random_integer" translatable="false">RanInt</string>
    <string name="random_number" translatable="false">Ran#</string>
    <string name="rectangular_to_polar" translatable="false">Pol</string>
    <string name="polar_to_rectangular" translatable="false">Rec</string>
    <string name="add_parentheses" translatable="false">( )</string>
    <string name="add_parentheses_on" translatable="false">(</string>
    <string name="add_parentheses_off" translatable="false">)</string>
    <string name="factorial" translatable="false">x!</string>
    <string name="power" translatable="false">^</string>
    <string name="square_root" translatable="false">√x</string>
    <string name="qubic_root" translatable="false">³√x</string>
    <string name="clear_all" translatable="false">AC</string>
    <string name="delete_last_char" translatable="false">⌫</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">-</string>
    <string name="multiply" translatable="false">×</string>
    <string name="divide" translatable="false">÷</string>
    <string name="calculate" translatable="false">=</string>
    <string name="comma" translatable="false">,</string>
    <string name="negate" translatable="false">⁺/₋</string>
    <string name="sine_" translatable="false">sin(</string>
    <string name="cosine_" translatable="false">cos(</string>
    <string name="tangent_" translatable="false">tan(</string>
    <string name="a_sine_" translatable="false">sin⁻¹(</string>
    <string name="a_cosine_" translatable="false">cos⁻¹(</string>
    <string name="a_tangent_" translatable="false">tan⁻¹(</string>
    <string name="sine_h_" translatable="false">sinh(</string>
    <string name="cosine_h_" translatable="false">cosh(</string>
    <string name="tangent_h_" translatable="false">tanh(</string>
    <string name="a_sine_h_" translatable="false">sinh⁻¹(</string>
    <string name="a_cosine_h_" translatable="false">cosh⁻¹(</string>
    <string name="a_tangent_h_" translatable="false">tanh⁻¹(</string>
    <string name="eulers_number_" translatable="false">е</string>
    <string name="pi_" translatable="false">π</string>
    <string name="log_" translatable="false">log(</string>
    <string name="log2_" translatable="false">log₂(</string>
    <string name="logx_" translatable="false">log</string>
    <string name="ln_" translatable="false">ln(</string>
    <string name="half_" translatable="false">½</string>
    <string name="third_" translatable="false">⅓</string>
    <string name="quarter_" translatable="false">¼</string>
    <string name="fifth_" translatable="false">⅕</string>
    <string name="tenth_" translatable="false">⅒</string>
    <string name="permutation_" translatable="false">Ƥ</string>
    <string name="combination_" translatable="false">С</string>
    <string name="percentage_" translatable="false">%</string>
    <string name="semicolon_" translatable="false">;</string>
    <string name="random_integer_" translatable="false">RanInt(</string>
    <string name="random_number_" translatable="false">Ran#</string>
    <string name="rectangular_to_polar_" translatable="false">Pol(</string>
    <string name="polar_to_rectangular_" translatable="false">Rec(</string>
    <string name="factorial_" translatable="false">!</string>
    <string name="power_" translatable="false">^</string>
    <string name="square_root_" translatable="false">√(</string>
    <string name="qubic_root_" translatable="false">³√(</string>
    <string name="add_" translatable="false">+</string>
    <string name="subtract_" translatable="false">-</string>
    <string name="multiply_" translatable="false">×</string>
    <string name="divide_" translatable="false">÷</string>
    <string name="comma_" translatable="false">,</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="variable_a" translatable="false">A</string>
    <string name="variable_b" translatable="false">B</string>
    <string name="variable_c" translatable="false">C</string>
    <string name="variable_d" translatable="false">D</string>
    <string name="variable_e" translatable="false">E</string>
    <string name="variable_f" translatable="false">F</string>
    <string name="variable_g" translatable="false">G</string>
    <string name="variable_x" translatable="false">X</string>
    <string name="variable_y" translatable="false">Y</string>
    <string name="variable_z" translatable="false">Z</string>
    <string name="tooltip_variable_a" translatable="false">1</string>
    <string name="tooltip_variable_b" translatable="false">2</string>
    <string name="tooltip_variable_c" translatable="false">3</string>
    <string name="tooltip_variable_d" translatable="false">4</string>
    <string name="tooltip_variable_e" translatable="false">5</string>
    <string name="tooltip_variable_f" translatable="false">6</string>
    <string name="tooltip_variable_g" translatable="false">7</string>
    <string name="tooltip_variable_x" translatable="false">8</string>
    <string name="tooltip_variable_y" translatable="false">9</string>
    <string name="tooltip_variable_z" translatable="false">10</string>
    <string name="scientic_mode_degree" translatable="false">Deg</string>
    <string name="scientic_mode_radians" translatable="false">Rad</string>
    <string name="actionbar_settings" translatable="false">⋮</string>
    <string name="dropdown_arrow_down" translatable="false">˅</string>
    <string name="dropdown_arrow_up" translatable="false">˄</string>
    <string name="settings_decimal_points_config_1" translatable="false">1</string>
    <string name="settings_decimal_points_config_2" translatable="false">2</string>
    <string name="settings_decimal_points_config_3" translatable="false">3</string>
    <string name="settings_decimal_points_config_4" translatable="false">4</string>
    <string name="settings_decimal_points_config_5" translatable="false">5</string>
    <string name="settings_decimal_points_config_6" translatable="false">6</string>
    <string name="settings_decimal_points_config_7" translatable="false">7</string>
    <string name="settings_decimal_points_config_8" translatable="false">8</string>
    <string name="settings_decimal_points_config_9" translatable="false">9</string>
    <string name="settings_decimal_points_config_10" translatable="false">10</string>
    <string name="settings_decimal_points_config_11" translatable="false">11</string>
    <string name="settings_decimal_points_config_12" translatable="false">12</string>
    <string name="settings_decimal_points_config_13" translatable="false">13</string>
    <string name="settings_decimal_points_config_14" translatable="false">14</string>
    <string name="settings_decimal_points_config_15" translatable="false">15</string>
    <string name="category_info">App-Infos</string>
    <string name="about_other_license">Apache License, Version 2.0</string>
    <string name="about_other_privacy_policy">Datenschutzerklärung</string>
    <string name="about_made_in_germany">Mit ❤️ in Deutschland entwickelt.</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_language">Sprache</string>
    <string name="settings_language_description">Wählen Sie die gewünschte Sprache für die App aus, um Menüs und Benachrichtigungen in dieser Sprache anzuzeigen.</string>
    <string name="settings_changelog">Changelog</string>
    <string name="settings_buttons">Knöpfe und Anzeigen</string>
    <string name="settings_insert_pi">PI einfügen</string>
    <string name="settings_insert_pi_description">Aktivieren Sie diese Option, um beim Eingeben von \'3,14\' in den Taschenrechner automatisch das Zeichen π einzufügen.</string>
    <string name="settings_notification">Benachrichtigungen</string>
    <string name="settings_decimal_points">Nachkommastellen</string>
    <string name="settings_decimal_points_description">Stellen Sie die Anzahl der Nachkommastellen ein, die im Umrechner angezeigt werden.</string>
    <string name="settings_report_error">Fehler melden</string>
    <string name="settings_report_error_description">Melden Sie App-Probleme direkt an unser Support-Team, um uns bei der Fehlerbehebung und Verbesserung zu unterstützen.</string>
    <string name="settings_reminder">Erinnerungen</string>
    <string name="settings_reminder_description">Erhalten Sie Benachrichtigungen, um den Taschenrechner regelmäßig zu nutzen.</string>
    <string name="settings_daily_hints">Tägliche Tipps</string>
    <string name="settings_daily_hints_description">Erhalten Sie täglich nützliche Tipps zur optimalen Nutzung des Taschenrechners.</string>
    <string name="settings_language_config_german">Deutsch</string>
    <string name="settings_language_config_english">Englisch</string>
    <string name="settings_language_config_spanish">Spanisch</string>
    <string name="settings_language_config_french">Französisch</string>
    <string name="settings_history_animation">Verlauf Animation</string>
    <string name="settings_history_animation_description">Schalte die Scroll-Animation im Verlauf ein oder aus, die direkt nach dem Aufrufen des Verlaufs startet.</string>
</resources>