<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_change_language_to_german"
        android:title="@string/settings_language_config_german"
        android:onClick="changeLanguageToGerman" />

    <item
        android:id="@+id/settings_change_language_to_english"
        android:title="@string/settings_language_config_english"
        android:onClick="changeLanguageToEnglish" />

    <item
        android:id="@+id/settings_change_language_to_spanish"
        android:title="@string/settings_language_config_spanish"
        android:onClick="changeLanguageToSpanish" />

    <item
        android:id="@+id/settings_change_language_to_french"
        android:title="@string/settings_language_config_french"
        android:onClick="changeLanguageToFrench" />
</menu>